<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <ImageView
            android:id="@+id/hand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hand_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_hand" />

        <ImageView
            android:id="@+id/mediaBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/media_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_media_background" />

        <TextView
            android:id="@+id/greetingTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/itim_regular"
            android:text="@string/hello_simi"
            android:textColor="@color/text_black"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/subjectRv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/greetingTv" >

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/noSubjectsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_subjects"
            android:fontFamily="@font/itim_regular"
            android:textSize="20sp"
            android:textColor="@color/text_black"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/greetingTv"
            app:layout_constraintBottom_toTopOf="@+id/recentlyWatchedTv"
            />

        <TextView
            android:id="@+id/recentlyWatchedTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/itim_regular"
            android:text="@string/recently_watched_topics"
            android:textColor="@color/text_black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subjectRv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recentlyWatchedRv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recentlyWatchedTv">

        </androidx.recyclerview.widget.RecyclerView>

        <ImageView
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="10dp"
            android:elevation="8dp"
            app:srcCompat="@drawable/button_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recentlyWatchedRv"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/buttonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:elevation="8dp"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintTop_toTopOf="@+id/button"
            app:layout_constraintBottom_toBottomOf="@+id/button"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


